objects/Learning_Board__c.object
<CustomObject>
    <description>Created: Venkatesh S\Veeresh Alur
Date: 15/11/2013
Capablity: ES Offering
Release: 1
Description: Learning Board</description>
    <fields>
        <fullName>Default_Image_Name__c</fullName>
        <label>Default Image Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning_Board_Template_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Board Template ID</label>
        <referenceTo>Learning_Board_Template__c</referenceTo>
        <relationshipLabel>Learning Boards</relationshipLabel>
        <relationshipName>Learning_Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Title__c</fullName>
        <label>Sub Title</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>Learning Board</label>
    <listViews>
        <fullName>Admin_view</fullName>
        <columns>Name__c</columns>
        <columns>Featured__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Admin view</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Featured__c</columns>
        <columns>Is_Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LB-{0000000000}</displayFormat>
        <label>Learning Board ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Boards</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>DescriptionReq</fullName>
        <active>true</active>
        <description>To make Description as required</description>
        <errorConditionFormula>LEN( Description__c) ==0</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Description is Mandatory</errorMessage>
    </validationRules>
</CustomObject>